# CRM-Digital-FTE

./: .gitignore  Dockerfile  check_customers.py  check_db.py  check_hash.py  docker-compose.yml  main.py  mcp_server.py  pyproject.toml
context/: brand-voice.md  company-profile.md  escalation-rules.md  product-docs.md
k8s/: configmap.yaml  deployment.yaml  migration-job.yaml  secret.yaml  service.yaml
production/: main.py  prompts.py
production/agents/: classifier.py  responder.py  tools.py
production/clients/: db_client.py  kafka_client.py  session_store.py
production/database/: schema.sql
production/ingestion/: gmail.py  web_form.py  whatsapp.py
scripts/: fix_schema.py  get_gmail_token.py  migrate.py  organize_project.py
specs/: customer-success-fte-spec.md  discovery-log.md  skills-manifest.md  transition-checklist.md
tests/: test_3cases.py  test_agent_direct.py  test_api.py  test_api_db_save.py  test_appreciation.py  test_batch.py  test_cases.py  test_classification_fix.py  test_conversation.py  test_cross_channel_memory.py  test_db.py  test_db_save.py  test_email.py  test_final_demo.py  test_frustration.py  test_gmail.py  test_gmail_api.py  test_gmail_real.py  test_gmail_webhook.py  test_kafka_consumer.py  test_kafka_listen.py  test_kafka_producer.py  test_memory.py  test_memory_comprehensive.py  test_memory_service.py  test_mobile_app.py  test_multi_channel_context_thorough.py  test_next4.py  test_persistence.py  test_production.py  test_refund.py  test_report.py  test_webhook.py  test_webhook_direct.py  test_worst_ever.py
(+17 files in other folders)
